--- a/MonBTPRent/app/src/main/res/layout/activity_main.xml
+++ b/MonBTPRent/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.marcd.MonBTPRent.MainActivity">
 
-    <TextView
+    <ImageView
         android:id="@+id/Titre"
-        android:layout_width="292dp"
-        android:layout_height="47dp"
-        android:text="Connexion appli MonBTPRent"
+        android:layout_width="294dp"
+        android:layout_height="108dp"
+        android:background="@drawable/btprentlogo"
+        android:gravity="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,7 +24,7 @@
         android:id="@+id/lEmail"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -54,7 +55,7 @@
         android:id="@+id/lMdp"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -84,7 +85,7 @@
         android:id="@+id/lButton"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="88dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -109,15 +110,5 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/idTech"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Technicien"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lButton" />
 
 </android.support.constraint.ConstraintLayout>
