--- a/MonBTPRent/app/src/main/res/layout/activity_enquete1.xml
+++ b/MonBTPRent/app/src/main/res/layout/activity_enquete1.xml
@@ -12,6 +12,7 @@
         android:layout_height="48dp"
         android:text="Enquete de satisfaction"
         android:textSize="26sp"
+        android:textColor="@color/colorGreen"
         tools:layout_editor_absoluteX="32dp"
         tools:layout_editor_absoluteY="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Etat du materiel"
+            android:textColor="@color/colorBlueSky"
             android:textSize="20sp" />
 
         <RatingBar
@@ -59,6 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Livraison dans les temps"
+            android:textColor="@color/colorBlueSky"
             android:textSize="20sp" />
 
         <RatingBar
@@ -73,9 +76,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:text="Suivant"
+        android:backgroundTint="@color/colorGreen"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lLiv" />
+
+    <ImageView
+        android:id="@+id/Titre"
+        android:layout_width="294dp"
+        android:layout_height="80dp"
+        android:background="@drawable/btprentlogo"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/idSuivant1"
+         />
 
 </android.support.constraint.ConstraintLayout>
