--- a/MonBTPRent/app/src/main/res/layout/activity_main.xml
+++ b/MonBTPRent/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="annuler"
+            android:backgroundTint="@color/colorGreen"
             tools:layout_editor_absoluteX="55dp"
             tools:layout_editor_absoluteY="383dp" />
 
@@ -105,6 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="se connecter"
+            android:backgroundTint="@color/colorGreen"
             tools:layout_editor_absoluteX="220dp"
             tools:layout_editor_absoluteY="383dp" />
 
