--- a/MonBTPRent/app/src/main/res/layout/activity_resultat.xml
+++ b/MonBTPRent/app/src/main/res/layout/activity_resultat.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Retour"
+        android:backgroundTint="@color/colorGreen"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="415dp"
         app:layout_constraintLeft_toLeftOf="parent"
