--- a/MonBTPRent/app/src/main/res/values/colors.xml
+++ b/MonBTPRent/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorGreen">#009933</color>
+    <color name="colorBlueSky">#00bfff</color>
+    <color name="colorRed">#ff0000</color>
 </resources>
